# graphene

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: Makefile  example_app.c  gwo_im.c  optim_compare.c
examples/: init_seedset.txt  small.edgelist
include/: graph.h  utils.h
scripts/: generate_edgelist.py  generate_edgelist_examples.py
src/: algorithms.c  graph.c  traversal.c  utils.c
tests/: test_graph.c
